# OOPSZI_lab

./: README.md
LAB_1/: CMakeLists.txt
LAB_1/Task1/: CMakeLists.txt  Task1.c
LAB_1/Task2/: CMakeLists.txt  Task2.c
LAB_1/Task3/: CMakeLists.txt  Task3.c
LAB_1/Task4/: CMakeLists.txt  Task4.c
LAB_1/Task5/: CMakeLists.txt  Task5_func.c  Task5_main.c
LAB_1/Task6/: CMakeLists.txt  Task6_func.c  Task6_main.c
LAB_1/Task7/: CMakeLists.txt  Func.h  Task7_func.c  Task7_main.c
LAB_1/Task8/: CMakeLists.txt
LAB_2/: CMakeLists.txt
LAB_2/LAB_2/: CMakeLists.txt  Zadacha1.c  Zadacha2.c  main.c
LAB_3/: CMakeLists.txt
LAB_3/DO_WHILE/: 1d_w_sum.c  2d_w_sum2.c  3d_w_print.c  4d_w_findFirstElement.c  5d_w_findFirstNegatEl.c  CMakeLists.txt  main_d_w.c
LAB_3/FOR/: 1for_sum.c  2for_sum2.c  3for_print.c  4for_findFirstElement.c  5for_findFirstNegatEl.c  CMakeLists.txt  main_for.c
LAB_3/WHILE/: 1wh_sum.c  2wh_sum2.c  3wh_print.c  4wh_findFirstElement.c  5wh_findFirstNegatEl.c  CMakeLists.txt  main_while.c
LAB_3/header/: a.c  head.h
LAB_4/: CMakeLists.txt
LAB_4/LAB_4/: CMakeLists.txt  LAB_4.cpp  LAB_4.h  main.cpp
LAB_5/: CMakeLists.txt
LAB_5/exe/: CMakeLists.txt  Stack.cpp
